--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
-  "name": "wine-guys",
+  "name": "wein-guys",
   "version": "0.1.0",
-  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "@prisma/client": "^2.16.0",
     "next": "10.0.6",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3"
+  },
+  "devDependencies": {
+    "prisma": "^2.16.0"
   }
 }
