--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "wein-guys",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "repository": "https://github.com/luke-rucker/wein-guys.git",
+  "author": "Luke Rucker <ruckerlh@gmail.com>",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
