--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@prisma/client": "^2.16.0",
+    "lodash.isequal": "^4.5.0",
     "next": "10.0.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
