--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@prisma/client": "^2.16.0",
+    "formik": "^2.2.6",
+    "formik-semantic-ui-react": "^2.0.0",
     "lodash.isequal": "^4.5.0",
     "next": "10.0.6",
     "react": "17.0.1",
