--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@prisma/client": "^2.16.0",
+    "form-data": "^3.0.0",
     "formik": "^2.2.6",
     "formik-semantic-ui-react": "^2.0.0",
     "lodash.isequal": "^4.5.0",
     "next": "10.0.6",
+    "nodemailer": "^6.4.17",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "semantic-ui-css": "^2.4.1",
